syntax="proto3";
package user;

option go_package="fullstack-go-grpc/protos/user";

import "google/protobuf/timestamp.proto";

message User {
    string unique_id = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
    google.protobuf.Timestamp dob = 5;
    Address address = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}
message Address {
   
    string country = 2;
    string state = 3;
}